added security using jwt (auth, register)
